# fastLEC

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  DEBUG_GUIDE.md  LICENSE  README.md  build.sh  build_test.sh  clean.sh  debug.sh  debug_utils.sh  res.txt  test.sh  test_16_TOP11_1.aig  test_16_TOP11_10.aig  test_16_TOP11_11.aig  test_16_TOP11_12.aig  test_16_TOP11_13.aig  test_16_TOP11_14.aig  test_16_TOP11_15.aig  test_16_TOP11_16.aig  test_16_TOP11_17.aig  test_16_TOP11_18.aig  test_16_TOP11_19.aig  test_16_TOP11_2.aig  test_16_TOP11_20.aig  test_16_TOP11_21.aig  test_16_TOP11_22.aig  test_16_TOP11_23.aig  test_16_TOP11_24.aig  test_16_TOP11_25.aig  test_16_TOP11_26.aig  test_16_TOP11_27.aig  test_16_TOP11_28.aig  test_16_TOP11_29.aig  test_16_TOP11_3.aig  test_16_TOP11_30.aig  test_16_TOP11_31.aig  (+66 more)
.cache/clangd/index/: AIG.cpp.27AB7E7CE9051718.idx  AIG.hpp.731CEFC0BB3036D6.idx  CNF.cpp.5406A0034CEE7FCE.idx  CNF.hpp.BCCBA43A116F8034.idx  XAG.cpp.B0DDCF14D36502A2.idx  XAG.hpp.15826A794FA4CA87.idx  aiger.c.447B08B70D7198A5.idx  aiger.h.04CC71B3DF46BF88.idx  basic.cpp.FE567F7632DCD3E6.idx  basic.hpp.773A0729B527A0C3.idx  config.h.35A5D51FFD1BA718.idx  cudd.cpp.C10BFBCF084001E6.idx  cudd.h.3FF659C317D26C16.idx  cudd.hpp.9D311CC7B42D9F5C.idx  fastLEC.cpp.E871A3F9137FB28B.idx  fastLEC.hpp.918A9215EC903327.idx  gES.h.866BC97DD5B8E39C.idx  kissat.h.AEDB4C312A4CF2E7.idx  lace.h.B913CE659BC6021C.idx  lace_config.h.F9F49CE8FB37F113.idx  main.cpp.742C80B2B0D8BB03.idx  pSAT.cpp.3ED954B009D97E11.idx  pSAT.hpp.85FB83FE9A92D63C.idx  pSAT_heuristics.cpp.931BA2BC46F1370B.idx  pSAT_task.cpp.FC57D8EA7779DCD3.idx  pSAT_task.hpp.3D2C83942E2D71CF.idx  parser.hpp.F8544063208B86CF.idx  selection.cpp.82B3877A8DB74881.idx  seqSAT.cpp.CD941BC7D6B86DE3.idx  simu.hpp.A55202727FE30A8E.idx  simu_para.cpp.5202C9CC13212CB8.idx  simu_seq.cpp.E15ED8F3EF16DB7E.idx  sweeper.cpp.631CFA83BBC28A51.idx  sweeper.hpp.DD7249B797798AA3.idx  sylvan.cpp.ED9EAC9D3C833175.idx  sylvan.h.C75F0AB964BDF40B.idx  sylvan_bdd.h.01216E6B293DA9EC.idx  sylvan_cache.h.783DB0F4763BF8AA.idx  sylvan_common.h.F4A12F9CBB125727.idx  sylvan_config.h.32BC0E751FA0853A.idx  (+9 more)
cmake/: dummy_gES.cpp.in
data/: test_11_TOP5.aiger  test_11_TOP6.aiger  test_11_TOP7.aiger  test_12_TOP4.aiger  test_12_TOP5.aiger  test_12_TOP6.aiger  test_12_TOP7.aiger  test_13_TOP10.aiger  test_13_TOP11.aiger  test_13_TOP12.aiger  test_13_TOP13.aiger  test_13_TOP14.aiger  test_13_TOP15.aiger  test_13_TOP16.aiger  test_13_TOP17.aiger  test_13_TOP18.aiger  test_13_TOP19.aiger  test_13_TOP20.aiger  test_13_TOP21.aiger  test_13_TOP22.aiger  test_13_TOP23.aiger  test_13_TOP24.aiger  test_13_TOP25.aiger  test_13_TOP26.aiger  test_13_TOP27.aiger  test_13_TOP28.aiger  test_13_TOP7.aiger  test_13_TOP8.aiger  test_13_TOP9.aiger  test_14_TOP10.aiger  test_14_TOP11.aiger  test_14_TOP12.aiger  test_14_TOP13.aiger  test_14_TOP14.aiger  test_14_TOP15.aiger  test_14_TOP16.aiger  test_14_TOP17.aiger  test_14_TOP18.aiger  test_14_TOP19.aiger  test_14_TOP20.aiger  (+328 more)
log/: graph.dot
src/: AIG.cpp  AIG.hpp  CNF.cpp  CNF.hpp  XAG.cpp  XAG.hpp  basic.cpp  basic.hpp  cudd.cpp  cudd.hpp  es.cpp  fastLEC.cpp  fastLEC.hpp  gES.cu  gES.h  main.cpp  model_bdd.json  model_sat.json  pSAT.cpp  pSAT.hpp  pSAT_heuristics.cpp  pSAT_task.cpp  pSAT_task.hpp  parser.hpp  selection.cpp  seqSAT.cpp  simu.cpp  simu.hpp  simu_logic.cpp  simu_para.cpp  simu_seq.cpp  sweeper.cpp  sweeper.hpp  sylvan.cpp  vis.cpp  vis.hpp
toolbox/: build_mpi_para.sh  mpi_para  mpi_para.cpp  mpi_para.hpp
